intel/bench_214_new/extr_.tenginesrchttpngx_http_parse_time.c_ngx_http_parse_time_with_main/log.txt
bench_214_new/extr_.tenginesrchttpngx_http_parse_time.c_ngx_http_parse_time_with_main/extr_.tenginesrchttpngx_http_parse_time.c_ngx_http_parse_time_with_main.c:35:11: error: assigning to 'enum (anonymous enum at bench_214_new/extr_.tenginesrchttpngx_http_parse_time.c_ngx_http_parse_time_with_main/extr_.tenginesrchttpngx_http_parse_time.c_ngx_http_parse_time_with_main.c:28:5)' from incompatible type 'int'
    fmt = 0;
          ^
1 error generated.
HLS FPGA Parse FAILED.
